--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto 2</title>
-  <link rel="stylesheet" href="/style/style.css" />
+  <link rel="stylesheet" href="style/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -15,14 +15,14 @@
   <section class="header">PROJETO 2 - JAVASCRIPT</section>
 
   <section class="item">
-    <a href="/pages/admin.html" target="_blank"><img class="admIMG" src="/img/adm.png"></a>
+    <a href="pages/admin.html" target="_blank"><img class="admIMG" src="img/adm.png"></a>
   </section>
 
   <section class="footer">
     <div class="footer2">
-      <h3>Gustavo Aquino ☞ <a href="/pages/CurriculoGustavo.html" target="_blank"> CV</a></h3>
-      <h3>Gabriel Fabiano ☞<a href="/pages/CurriculoGabriel.html" target="_blank"> CV</a></h3>
-      <img src="/img/painel.png">
+      <h3>Gustavo Aquino ☞ <a href="pages/CurriculoGustavo.html" target="_blank"> CV</a></h3>
+      <h3>Gabriel Fabiano ☞<a href="pages/CurriculoGabriel.html" target="_blank"> CV</a></h3>
+      <img src="img/painel.png">
     </div>
   </section>
 </body>
