--- a/pages/CurriculoGabriel.html
+++ b/pages/CurriculoGabriel.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Currículo - Gabriel Fabiano de Oliveira</title>
-  <link rel="stylesheet" href="/style/CurriculoGabriel.css">
+  <link rel="stylesheet" href="../style/CurriculoGabriel.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <h1 class="nome">Gabriel Fabiano de Oliveira</h1>
 
     <figure class="foto-perfil">
-      <img src="/img/perfilGabriel.jpeg" alt="Foto de perfil de Gabriel" width="150">
+      <img src="../img/perfilGabriel.jpeg" alt="Foto de perfil de Gabriel" width="150">
       <figcaption>Foto de perfil</figcaption>
     </figure>
   </header>
@@ -22,15 +22,15 @@
     <h2>Contato</h2>
     <ul>
       <li>
-        <img src="/img/email.png.png" alt="Ícone de e-mail" width="16">
+        <img src="../img/email.png.png" alt="Ícone de e-mail" width="16">
         <a href="mailto:seuemail@exemplo.com">seuemail@exemplo.com</a>
       </li>
       <li>
-        <img src="/img/linkedin.png.png" alt="Ícone do LinkedIn" width="16">
+        <img src="../img/linkedin.png.png" alt="Ícone do LinkedIn" width="16">
         <a href="https://linkedin.com/in/seuusuario" target="_blank">linkedin.com/in/seuusuario</a>
       </li>
       <li data-cidade="Cornélio Procópio">
-        <img src="/img/paisagem.jpeg" alt="Ícone de cidade" width="16">
+        <img src="../img/paisagem.jpeg" alt="Ícone de cidade" width="16">
         Cornélio Procópio - PR
       </li>
     </ul>
@@ -44,7 +44,7 @@
   <section class="ods">
     <h2>ODS que pretendo contribuir</h2>
     <figure>
-      <img src="/img/ods4.jpeg" alt="Imagem da ODS escolhida" width="200">
+      <img src="../img/ods4.jpeg" alt="Imagem da ODS escolhida" width="200">
       <figcaption>ODS 4 - Educação de Qualidade</figcaption>
     </figure>
   </section>
