--- a/pages/CurriculoGustavo.html
+++ b/pages/CurriculoGustavo.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-    <link rel="stylesheet" href="/style/CurriculoGustavo.css.css">
+    <link rel="stylesheet" href="../style/CurriculoGustavo.css.css">
     <meta charset="UTF-8">
     <title>Currículo - Gustavo Alves de Aquino</title>
 </head>
@@ -12,24 +12,24 @@
     <h1>Gustavo Alves de Aquino</h1>
 
     <figure>
-        <img src="/img/perfil.jpg.jpg" alt="Foto de perfil de Gustavo Alves de Aquino" width="150">
+        <img src="../img/perfil.jpg.jpg" alt="Foto de perfil de Gustavo Alves de Aquino" width="150">
         <figcaption>Foto de perfil</figcaption>
     </figure>
 
     <p>
-        <img src="/img/email.png.png" alt="Ícone de e-mail" width="16">
+        <img src="../img/email.png.png" alt="Ícone de e-mail" width="16">
         <strong>E-mail:</strong>
         <a href="mailto:gustavoaquino@alunos.utfpr.edu.br">gustavoaquino@alunos.utfpr.edu.br</a>
         <br>
 
-        <img src="/img/linkedin.png.png" alt="Ícone do LinkedIn" width="16">
+        <img src="../img/linkedin.png.png" alt="Ícone do LinkedIn" width="16">
         <strong>LinkedIn:</strong>
         <a href="https://www.linkedin.com/in/gustavo-aquino-90ba3a228/" target="_blank">
             https://www.linkedin.com/in/gustavo-aquino-90ba3a228/
         </a>
         <br>
 
-        <img src="/img/local.png.png" alt="Ícone de localização" width="16">
+        <img src="../img/local.png.png" alt="Ícone de localização" width="16">
         <strong>Localização:</strong> Cornélio Procópio, Paraná
     </p>
 
@@ -39,7 +39,7 @@
 
     <h2>ODS que pretendo contribuir</h2>
     <figure>
-        <img src="/img/ods.png" alt="Imagem do ODS escolhido" width="200">
+        <img src="../img/ods.png" alt="Imagem do ODS escolhido" width="200">
         <figcaption>ODS 9 - Indústria, Inovação e Infraestrutura</figcaption>
     </figure>
 
